force-app/main/default/objects/PNC_Recon_Detail__c/PNC_Recon_Detail__c.object-meta.xml
<CustomObject>
    <label>PNC Recon Detail</label>
    <nameField>
        <displayFormat>RECON-{00000000}</displayFormat>
        <label>PNC Recon Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PNC Recon Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>