force-app/main/default/objects/PNC_Recon_Detail__c/fields/Biller_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Biller_Account_Number__c</fullName>
    <label>Biller Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>