force-app/main/default/objects/PNC_Recon_Detail__c/fields/Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Capture_Date__c</fullName>
    <label>Capture Date</label>
    <type>Date</type>
</CustomField>