force-app/main/default/objects/PNC_Recon_Detail__c/fields/Int_PX_Remit__c.field-meta.xml
<CustomField>
    <fullName>Int_PX_Remit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Int PX Remit</label>
    <referenceTo>Int_PX_Remit__c</referenceTo>
    <relationshipLabel>PNC Recon Details</relationshipLabel>
    <relationshipName>PNC_Recon_Details</relationshipName>
    <type>Lookup</type>
</CustomField>