force-app/main/default/objects/PNC_Recon_Detail__c/fields/Invoice_Payment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment__c</fullName>
    <label>Invoice Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>