force-app/main/default/objects/PNC_Recon_Detail__c/fields/Payment_Channel__c.field-meta.xml
<CustomField>
    <fullName>Payment_Channel__c</fullName>
    <label>Payment Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>