force-app/main/default/objects/PNC_Recon_Detail__c/fields/PNC_Recon_Batch__c.field-meta.xml
<CustomField>
    <fullName>PNC_Recon_Batch__c</fullName>
    <label>PNC Recon Batch</label>
    <referenceTo>PNC_Recon_Batch__c</referenceTo>
    <relationshipLabel>PNC Recon Details</relationshipLabel>
    <relationshipName>PNC_Recon_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>