force-app/main/default/objects/PNC_Recon_Detail__c/fields/Reversal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Amount__c</fullName>
    <label>Reversal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>