force-app/main/default/objects/PNC_Recon_Detail__c/fields/Reversal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Reason__c</fullName>
    <label>Reversal Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>